cap the image width on templates page Fix misaligned social follow

--- a/css/www/templates/page.css
+++ b/css/www/templates/page.css
@@ -46,6 +46,7 @@
 
 .www-template-preview-img {
   margin-bottom: var(--space-5);
+  max-width: 360px;
 }
 
 .www-templates-action {
